--- a/addons/net.kivano.groups/plugin.cfg
+++ b/addons/net.kivano.groups/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="Group Manager"
-description="Plugin that allows you to scan your project in order to gather informations about groups"
+description="Plugin that allows you to scan your project in order to gather informations about groups."
 author="Jakub Grzesik"
 version="0.91"
 script="GroupManagerInitScript.gd"
